--- a/styles.scss
+++ b/styles.scss
@@ -1,1 +1,36 @@
-/* css styles */
+/* Variables */
+@import "_sass/minimal-mistakes/variables";
+
+/* Mixins and functions */
+@import "_sass/minimal-mistakes/vendor/breakpoint/breakpoint";
+@include breakpoint-set("to ems", true);
+@import "_sass/minimal-mistakes/vendor/magnific-popup/magnific-popup"; // Magnific Popup
+@import "_sass/minimal-mistakes/vendor/susy/susy";
+@import "_sass/minimal-mistakes/mixins";
+
+/* Core CSS */
+@import "_sass/minimal-mistakes/reset";
+@import "_sass/minimal-mistakes/base";
+@import "_sass/minimal-mistakes/forms";
+@import "_sass/minimal-mistakes/tables";
+@import "_sass/minimal-mistakes/animations";
+
+/* Components */
+@import "_sass/minimal-mistakes/buttons";
+@import "_sass/minimal-mistakes/notices";
+@import "_sass/minimal-mistakes/masthead";
+@import "_sass/minimal-mistakes/navigation";
+@import "_sass/minimal-mistakes/footer";
+@import "_sass/minimal-mistakes/search";
+@import "_sass/minimal-mistakes/syntax";
+
+/* Utility classes */
+@import "_sass/minimal-mistakes/utilities";
+
+/* Layout specific */
+@import "_sass/minimal-mistakes/page";
+@import "_sass/minimal-mistakes/archive";
+@import "_sass/minimal-mistakes/sidebar";
+@import "_sass/minimal-mistakes/print";
+
+/*-- scss:rules --*/
