change about and lab url

--- a/_includes/_lab_nav.html
+++ b/_includes/_lab_nav.html
@@ -1,9 +1,9 @@
 <html>
 
 <div id="navAuthorized">
-  <a href="../pages/lesson.html"><button class="btn">Lesson</button></a>
-  <a href="../pages/labs.html"><button class="btn">Lab Work</button></a>
-  <a href="../pages/scoring.html"><button class="btn">Scoring</button></a>
+  <a href="../pages/lesson.ipynb"><button class="btn" style="font-size: 16px;">Lesson</button></a>
+  <a href="../pages/labs.html"><button class="btn" style="font-size: 16px;">Lab Work</button></a>
+  <a href="../pages/scoring.html"><button class="btn" style="font-size: 16px;">Scoring</button></a>
 </div>
 
 
