--- a/_includes/_lab_nav.html
+++ b/_includes/_lab_nav.html
@@ -1,7 +1,7 @@
 <html>
 
 <div id="navAuthorized">
-  <a href="../pages/lesson.ipynb"><button class="btn" style="font-size: 17px;">Lesson</button></a>
+  <a href="../pages/lesson.html"><button class="btn" style="font-size: 17px;">Lesson</button></a>
   <a href="../pages/labs.html"><button class="btn" style="font-size: 17px;">Lab Work</button></a>
   <a href="../pages/scoring.html"><button class="btn" style="font-size: 17px;">Scoring</button></a>
 </div>
