--- a/styles.scss
+++ b/styles.scss
@@ -1,36 +1,80 @@
-/* Variables */
-@import "_sass/minimal-mistakes/variables";
-
-/* Mixins and functions */
-@import "_sass/minimal-mistakes/vendor/breakpoint/breakpoint";
-@include breakpoint-set("to ems", true);
-@import "_sass/minimal-mistakes/vendor/magnific-popup/magnific-popup"; // Magnific Popup
-@import "_sass/minimal-mistakes/vendor/susy/susy";
-@import "_sass/minimal-mistakes/mixins";
-
-/* Core CSS */
-@import "_sass/minimal-mistakes/reset";
-@import "_sass/minimal-mistakes/base";
-@import "_sass/minimal-mistakes/forms";
-@import "_sass/minimal-mistakes/tables";
-@import "_sass/minimal-mistakes/animations";
-
-/* Components */
-@import "_sass/minimal-mistakes/buttons";
-@import "_sass/minimal-mistakes/notices";
-@import "_sass/minimal-mistakes/masthead";
-@import "_sass/minimal-mistakes/navigation";
-@import "_sass/minimal-mistakes/footer";
-@import "_sass/minimal-mistakes/search";
-@import "_sass/minimal-mistakes/syntax";
-
-/* Utility classes */
-@import "_sass/minimal-mistakes/utilities";
-
-/* Layout specific */
-@import "_sass/minimal-mistakes/page";
-@import "_sass/minimal-mistakes/archive";
-@import "_sass/minimal-mistakes/sidebar";
-@import "_sass/minimal-mistakes/print";
+@import "_sass/_variables.scss";
 
 /*-- scss:rules --*/
+
+/*
+---------------
+Main
+---------------
+*/
+
+body {
+    background-color:$primary;
+}
+
+.navbar {
+    background-color:$secondary;
+}
+
+h1,h2,h3,h4,h5 {
+    color:lightblue;
+    margin:15px;
+}
+
+p, span, td, th, li, ul, input {
+    color: #fafbfc;
+}
+
+input {
+    background: none;
+    border: none;
+    padding:5px;
+    display:block;
+    font-size:16px;
+    cursor:pointer;
+    
+    &:focus {
+        border-color: $secondary;
+        outline: 0;
+        outline: thin dotted \9;
+        box-shadow: inset 0 1px 3px rgba($text-color, 0.06),
+            0 0 5px rgba($secondary, 0.7);
+        cursor:text;
+    }
+}
+
+.link {
+    color:blue;
+    text-decoration: underline;
+    cursor:pointer;
+}
+
+/*
+---------------
+Buttons
+---------------
+*/
+.btn {
+    background-color:$button;
+    border: $button-border 2px  solid;
+    color: white;
+
+    &:hover {
+        background-color:$button-light;
+        border: $button-border-light 2px solid;
+        color: white;
+    }
+}
+
+/*
+---------------
+Misc
+---------------
+*/
+
+.userAuth {
+    border-radius:10px;
+    padding:15px;
+    border: $button-border solid 3px;
+    background-color:$secondary;
+}
