--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -86,6 +86,7 @@
   // Replace with domain and api call of backend
   url = "";
 
+  // checks passwords
   function checkFields() {
     if (
       document.getElementById("pswd").value ==
