--- a/_includes/login.html
+++ b/_includes/login.html
@@ -95,7 +95,7 @@
                         sessionStorage.setItem("email", username);
                         sessionStorage.setItem("username", text);
 
-                        window.location.href = "{{site.baseurl}}/";
+                        window.location.href = "https://https://deimie.github.io/temp/";
                     })
                     .catch(error => console.log('error', error));
 
