--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -3,8 +3,8 @@
 <h1>Sign Up</h1>
 <table>
   <tr>
-    <th>Name</th>
     <th>
+      <span>Name</span>
       <input
         type="text"
         id="name"
