--- a/_includes/login.html
+++ b/_includes/login.html
@@ -1,46 +1,41 @@
 <html>
 
 <div id="login" class="userAuth">
-
-<h1>Login</h1>
-
-<table>
-    <tbody>
+    <table id="credentialsInput">
         <tr>
-            <th><span>Username</span><input autocomplete="off" type="email" id="username" name="username"
-                    placeholder="enter your username..."></th>
+            <th>Email</th>
+            <th><input autocomplete="off" type="email" id="username" name="username" placeholder="enter your username..."></th>
         </tr>
         <tr>
-            <th><span>Password</span><input autocomplete="off" type="password" id="pswd" name="pswd"
-                    placeholder="enter your password..."></th>
+            <th>Password</th>
+            <th><input autocomplete="off" type="password" id="pswd" name="pswd" placeholder="enter your password..."></th>
         </tr>
         <tr>
             <th><button class="btn" type="submit" value="Submit" onclick="login_user()">Submit</button></th>
         </tr>
 
         <tr>
-            <th> Or <a class="link" onclick="signUpPage()">sign up</a> instead.</th>
+            <th> Or <a onclick="signUpPage()">sign up</a> instead.</th>
         </tr>
-    </tbody>
-</table>
+    </table>
 
-<button class="btn" type="submit" onclick="logout()">Logout</button>
+    <button id="but_logout" class="btn" type="submit" onclick="logout()">Logout</button>
 </div>
-
 </html>
 
 <script>
 
 
-    if (sessionStorage.getItem("authorized")) {
-        document.getElementById("loggedIn").style.display = "hidden";
-        document.getElementById("loggedOut").style.visibility = "visible";
-    }
+if (sessionStorage.getItem("authorized") === "true") {
+    document.getElementById("but_logout").style.display = "block";
+    document.getElementById("credentialsInput").style.display = "none";
+}
 
-    else {
-        document.getElementById("loggedIn").style.visibility = "visible";
-        document.getElementById("loggedOut").style.display = "hidden";
-    }
+else {
+    document.getElementById("but_logout").style.display = "none";
+    document.getElementById("credentialisInput").style.display = "block";
+}
+
     // show signup, hide login
     function signUpPage() {
         document.getElementById("signup").style.display = "";
@@ -136,7 +131,7 @@
         sessionStorage.setItem("username", "Guest");
         sessionStorage.setItem("email", null);
         sessionStorage.setItem("authorized", false);
-        window.location.reload();
+        window.location.href = "https://deimie.github.io/temp/";
 
     }
 
