signup visual fix

--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -15,8 +15,8 @@
   </tr>
 
   <tr>
-    <th>Email</th>
     <th>
+      <span>Email</span>
       <input
         type="text"
         id="email"
@@ -27,8 +27,8 @@
   </tr>
 
   <tr>
-    <th>Password</th>
     <th>
+      <span>Password</span>
       <input
         type="password"
         id="password"
@@ -39,8 +39,8 @@
   </tr>
 
   <tr>
-    <th>Confirm Password</th>
     <th>
+      <span>Confirm Password</span>
       <input
         type="password"
         id="pswdagain"
@@ -51,8 +51,8 @@
   </tr>
 
   <tr>
-    <th>Date of Birth</th>
     <th>
+      <span>Date of Birth</span>
       <input
         type="text"
         placeholder="00-00-0000"
@@ -72,7 +72,7 @@
   </tr>
 
   <tr>
-    <th>Or <a onclick="loginPage()">login</a> instead.</th>
+    <th>Or <a onclick="loginPage()" class="link">login</a> instead.</th>
   </tr>
 </table>
 </div>
