--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -131,7 +131,10 @@
 
     fetch(url, options)
       .then((response) => console.log(response.text()))
-      .then((result) => console.log(result))
+      .then((result) =>  {
+        console.log(result);
+        window.location.href = "https://deimie.github.io/temp/pages/userControl.html";
+      })
       .catch((error) => console.log("error", error));
   }
 </script>
