--- a/_includes/_lab_nav.html
+++ b/_includes/_lab_nav.html
@@ -3,7 +3,7 @@
 <div id="navAuthorized">
   <a href="../temp/pages/scavenger.html"><button class="btn" style="font-size: 17px;">Scavenger Hunt</button></a>
   <a href="../temp/pages/lesson.html"><button class="btn" style="font-size: 17px;">Lesson</button></a>
-  <a href="../temp/pages/labs.html"><button class="btn" style="font-size: 17px;">Lab Work</button></a>
+  <a href="../temp/pages/cars.html"><button class="btn" style="font-size: 17px;">Lab Work</button></a>
   <a href="../temp/pages/scoring.html"><button class="btn" style="font-size: 17px;">Scoring</button></a>
 </div>
 
