--- a/_includes/login.html
+++ b/_includes/login.html
@@ -132,6 +132,7 @@
             if (item["name"] == "ROLE_ADMIN" || item["name"] == "ROLE_USER") {
               authorized = true;
             }
+            sessionStorage.setItem("role", item["name"]);
           }
           sessionStorage.setItem("authorized", authorized);
           fetch(
