--- a/_includes/login.html
+++ b/_includes/login.html
@@ -170,6 +170,7 @@
     sessionStorage.setItem("username", "Guest");
     sessionStorage.setItem("email", null);
     sessionStorage.setItem("authorized", false);
+    sessionStorage.setItem("role", null);
     window.location.href = "https://deimie.github.io/temp/";
   }
 </script>
