--- a/_includes/_lab_nav.html
+++ b/_includes/_lab_nav.html
@@ -4,7 +4,7 @@
   <a href="../temp/pages/scavenger.html"><button class="btn" style="font-size: 17px;">Scavenger Hunt</button></a>
   <a href="../temp/pages/lesson.html"><button class="btn" style="font-size: 17px;">Lesson</button></a>
   <a href="../temp/pages/cars.html"><button class="btn" style="font-size: 17px;">Lab Work</button></a>
-  <a href="../temp/pages/scoring.html"><button class="btn" style="font-size: 17px;">Scoring</button></a>
+  <a href="../temp/pages/scoringtemp.html"><button class="btn" style="font-size: 17px;">Scoring</button></a>
 </div>
 
 
